--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Compiled code
-/target
-
+**/target
+**/taget/.rustc_info.json 
 # This is optional - if you want to track dependency versions closely
 # /Cargo.lock
 
